--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=MASJID
+APP_NAME=SIDAQ-TPQ-INDONESIA
 APP_ENV=local
 APP_KEY=base64:kTQCiX3j6TAeIbRxANEHhBYMooYBdhWdw3tgs9ze7ks=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=masjid
+DB_DATABASE=sidaqtpq
 DB_USERNAME=adewahidin21
 DB_PASSWORD=Adewahidin21
 
@@ -56,4 +56,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
